Adding changes to api
